# static_worldcup

./: .gitignore  Plan.md  README.md  bracket-predictions.html  card-view.html  group-grid.html  index.html  metrics.html  prediction-methodology.html  print-pool.html  results.html  robots.txt  sitemap.xml  team.html
core_files/: fifa_teams.json
css/: print.css  styles.css
data/: stadiums.json  teams.json
fastapi_server/: main.py  pyproject.toml  test_db_connection.py
fastapi_server/app/: __init__.py  config.py  database.py
fastapi_server/app/models/: __init__.py  fifa_team.py  kalshi_candlestick.py  kalshi_event.py  kalshi_market.py  kalshi_team_chance.py  kalshi_team_ranking.py  pool_member.py  pool_team.py
fastapi_server/app/routers/: metrics.py  teams.py
fastapi_server/data/: matches.json
fastapi_server/data/cache/: kalshi_history.json
fastapi_server/scripts/: kalshi.py  polymarket_test.py  seed_teams.py
game_intelligence/: game_intelligence.md
game_intelligence/plans/: claude_plan.md  codex_plan.md  copilot_plan.md  gemini_plan.md
js/: bracket-predictions.js  compression.js  grid.js  index.js  landing.js  metrics.js  print.js  results.js  shared.js  team.js
